# penguin

./: Cargo.toml  justfile
myplugin/: Cargo.toml
myplugin/src/: lib.rs
proxywasm/: Cargo.toml
proxywasm/src/: lib.rs
proxywasm/wit/: proxywasm.wit
src/: main.rs
src/config/: def.rs
src/plugins/: mod.rs
src/plugins/wasm/: mod.rs
