[package]
name = "penguin"
version.workspace = true
edition.workspace = true

[workspace]
members = ["myplugin", "proxywasm"]
workspace.resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
wasmtime = "26.0"
wasmtime-wasi = "26.0"
wit-bindgen = "0.34.0"
proxywasm = { path = "./proxywasm" }

[dependencies]
async-trait = "0.1.83"
bytes = { version = "1.8.0" }
clap = { version = "4.5.20", features = ["derive"] }
config = { version = "0.14.1", default-features = false, features = ["yaml"] }
env_logger = { version = "0.11.5", features = ["unstable-kv"] }
hickory-resolver = "0.24.1"
http = "1.1.0"
humantime-serde = "1.1.1"
log = { version = "0.4.22", features = ["kv"] }
matchit = "0.8.4"
once_cell = "1.20.2"
pingora = { version = "0.3.0", features = ["lb", "openssl"] }
pingora-limits = "0.3.0"
regex = "1.11.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_with = "3.11.0"
serde_yaml = "0.9.34"
snafu = "0.8.5"
tokio = { version = "1.41.0", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
wasmtime = {workspace = true}
wasmtime-wasi = {workspace = true}
